; ModuleID = '/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4proc.c_nfs4_put_copy.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfsd/extr_nfs4proc.c_nfs4_put_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsd4_copy = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs4_put_copy(%struct.nfsd4_copy* %0) #0 {
  %2 = alloca %struct.nfsd4_copy*, align 8
  store %struct.nfsd4_copy* %0, %struct.nfsd4_copy** %2, align 8
  %3 = load %struct.nfsd4_copy*, %struct.nfsd4_copy** %2, align 8
  %4 = getelementptr inbounds %struct.nfsd4_copy, %struct.nfsd4_copy* %3, i32 0, i32 0
  %5 = call i32 @refcount_dec_and_test(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %11

8:                                                ; preds = %1
  %9 = load %struct.nfsd4_copy*, %struct.nfsd4_copy** %2, align 8
  %10 = call i32 @kfree(%struct.nfsd4_copy* %9)
  br label %11

11:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @refcount_dec_and_test(i32*) #1

declare dso_local i32 @kfree(%struct.nfsd4_copy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
